feat(job): add dashboard